Change sendgrid investor_type parameter

--- a/src/index.html
+++ b/src/index.html
@@ -206,8 +206,8 @@
 				<div class="sub-block token-block">
 					<p class="sub-block-text">I want to reserve</p>
 					<div id="tokenButtonsLanding" class="token-buttons">
-						<div class="token-button less active">€100k&lt;</div>
-						<div class="token-button more">≥€100k</div>
+						<div class="token-button less active" data-investor-type="public">€100k&lt;</div>
+						<div class="token-button more" data-investor-type="private">≥€100k</div>
 					</div>
 					<div class="sub-block-text text-right">worth of tokens</div>
 					<p class="text-right">
@@ -1186,8 +1186,8 @@
 					<div class="token-block">
 						<p class="sub-block-text">I want to reserve</p>
 						<div class="token-buttons" id="tokenButtons">
-							<div class="token-button active less">€100k&lt;</div>
-							<div class="token-button more">≥€100k</div>
+							<div class="token-button active less" data-investor-type="public">€100k&lt;</div>
+							<div class="token-button more" data-investor-type="private">≥€100k</div>
 						</div>
 						<div class="sub-block-text text-right">worth of tokens</div>
 						<h4 class="modal-sub-title">The private sale is reserved for minimum investments of
