--- a/src/index.html
+++ b/src/index.html
@@ -420,15 +420,15 @@
 									<tbody>
 									<tr>
 										<td>25%</td>
-										<td>2.500.000</td>
+										<td>2,500,000</td>
 									</tr>
 									<tr>
 										<td>20%</td>
-										<td>1.000.000</td>
+										<td>1,000,000</td>
 									</tr>
 									<tr>
 										<td>15%</td>
-										<td>100.000</td>
+										<td>100,000</td>
 									</tr>
 									</tbody>
 								</table>
@@ -451,11 +451,11 @@
 									</thead>
 									<tbody>
 									<tr>
-										<td>10,0%</td>
+										<td>10.0%</td>
 										<td>6.25%</td>
 									</tr>
 									<tr>
-										<td>5,0%</td>
+										<td>5.0%</td>
 										<td>18.75%</td>
 									</tr>
 									<tr>
@@ -485,9 +485,9 @@
 								<div class="row no-gutters">
 									<div class="col-12 col-md-5">
 										<div class="inner-img">
-											<img class="bg-img" src="images/slider-img-1.png" alt="image">
-											<img class="review-logo" src="images/logo-coinfirm-white.png"
-													 alt="logo">
+											<img class="bg-img" src="images/pic-coinfirm.png" alt="image">
+											<!--<img class="review-logo" src="images/logo-coinfirm-white.png"-->
+													 <!--alt="logo">-->
 										</div>
 									</div>
 									<div class="col-12 col-md-7">
@@ -507,8 +507,8 @@
 									<div class="col-12 col-md-5">
 										<div class="inner-img">
 											<img class="bg-img" src="images/pic-brickblock.png" alt="image">
-											<img class="review-logo" src="images/logo-brickblock-white.png"
-													 alt="logo">
+											<!--<img class="review-logo" src="images/logo-brickblock-white.png"-->
+													 <!--alt="logo">-->
 										</div>
 									</div>
 									<div class="col-12 col-md-7">
@@ -601,15 +601,15 @@
 					<ol class="carousel-indicators">
 						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
 							<img class="active-img" src="images/logo-coinfirm-hover.png"
-									 alt="bitcoin-foundation" width="140">
+									 alt="bitcoin-foundation">
 							<img class="default-img" src="images/logo-coinfirm-grey.png"
-									 alt="bitcoin-foundation" width="140">
+									 alt="bitcoin-foundation">
 						</li>
 						<li data-target="#carouselExampleIndicators" data-slide-to="1">
 							<img class="active-img" src="images/logo-brickblock-hover.png" alt="brickblock"
-									 width="160">
+							>
 							<img class="default-img" src="images/logo-brickblock-grey.png" alt="brickblock"
-									 width="160">
+							>
 						</li>
 			<!--			<li data-target="#carouselExampleIndicators" data-slide-to="2">
 							<img class="active-img" src="images/logo-solaris-bank-blue.png"
@@ -644,39 +644,19 @@
 				<div class="row justify-content-md-center">
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
-							<img src="images/jorg-pic.png" alt="jorg">
+							<img src="images/christoph-pic.png" alt="Christoph">
 							<div class="overlay" style="display: none">
-								<h6 class="member-name">Jörg von Minckwitz</h6>
-								<div class="position">CEO</div>
-								<div class="descr">Jörg has been actively involved in Bitcoin since the beginning of
-									2011 and has a long legacy of founding Bitcoin and crypto-based businesses. He is
-									the co-founder of Bitsandcoins Consulting UG, the first Bitcoin Consulting in
-									Europe, as well as E4BTC, the first e-commerce shop in Europe focused on Bitcoin.
-									He also co-founded Bitcoins Berlin, the first Bitcoin startup incubator in Europe.
+								<h6 class="member-name">Christoph Iwaniez</h6>
+								<div class="position">CFO</div>
+								<div class="descr">Christoph has joined Bitwala in July 2018 and is responsible for
+									budgeting, AML regulations, trading, and compliance. He has 10 + years of
+									experience in the traditional banking industry (LBBW) and M&A business. Christoph
+									also has experience as the CFO of a corporate start-up which connects German
+									Sparkassen Group to paydirekt payment scheme.
 								</div>
-								<a target="_blank" href="https://www.linkedin.com/in/joergvonminckwitz"
-									 class="social-icon"><i
-											class="fa fa-linkedin"
-											aria-hidden="true"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="team-member">
-							<img src="images/jan-pic.png" alt="jan">
-							<div class="overlay" style="display: none">
-								<h6 class="member-name">Jan Goslicki</h6>
-								<div class="position">CCO</div>
-								<div class="descr">Ex PwC, Jan has a strong attention to detail and quality
-									assurance. Jan oversees all aspects of finances, compliance and customer
-									relations. In July 2017 Jan had an accident that left him paralyzed. With his
-									strong mind and spirit, he is still actively contributing to the team and a
-									founding member and he will return to his desk within 2019.
-								</div>
-								<a target="_blank" href="https://www.linkedin.com/in/jangoslicki"
-									 class="social-icon"><i
-											class="fa fa-linkedin"
-											aria-hidden="true"></i></a>
+								<a target="_blank" href="https://www.linkedin.com/in/christoph-iwaniez-a93a558b"
+									 class="social-icon"><i class="fa fa-linkedin"
+																					aria-hidden="true"></i></a>
 							</div>
 						</div>
 					</div>
@@ -703,24 +683,6 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<div class="team-member">
-							<img src="images/christoph-pic.png" alt="Christoph">
-							<div class="overlay" style="display: none">
-								<h6 class="member-name">Christoph Iwaniez</h6>
-								<div class="position">CFO</div>
-								<div class="descr">Christoph has joined Bitwala in July 2018 and is responsible for
-									budgeting, AML regulations, trading, and compliance. He has 10 + years of
-									experience in the traditional banking industry (LBBW) and M&A business. Christoph
-									also has experience as the CFO of a corporate start-up which connects German
-									Sparkassen Group to paydirekt payment scheme.
-								</div>
-								<a target="_blank" href="https://www.linkedin.com/in/christoph-iwaniez-a93a558b"
-									 class="social-icon"><i class="fa fa-linkedin"
-																					aria-hidden="true"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4">
-						<div class="team-member">
 							<img src="images/konstantin-pic.png" alt="Konstantin">
 							<div class="overlay" style="display: none">
 								<h6 class="member-name">Konstantin Werhahn</h6>
@@ -740,10 +702,48 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="team-member">
+							<img src="images/jan-pic.png" alt="jan">
+							<div class="overlay" style="display: none">
+								<h6 class="member-name">Jan Goslicki</h6>
+								<div class="position">CCO</div>
+								<div class="descr">Ex PwC, Jan has a strong attention to detail and quality
+									assurance. Jan oversees all aspects of finances, compliance and customer
+									relations. In July 2017 Jan had an accident that left him paralyzed. With his
+									strong mind and spirit, he is still actively contributing to the team and a
+									founding member and he will return to his desk within 2019.
+								</div>
+								<a target="_blank" href="https://www.linkedin.com/in/jangoslicki"
+									 class="social-icon"><i
+											class="fa fa-linkedin"
+											aria-hidden="true"></i></a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="team-member">
+							<img src="images/jorg-pic.png" alt="jorg">
+							<div class="overlay" style="display: none">
+								<h6 class="member-name">Jörg von Minckwitz</h6>
+								<div class="position">Chief strategist</div>
+								<div class="descr">Jörg has been actively involved in Bitcoin since the beginning of
+									2011 and has a long legacy of founding Bitcoin and crypto-based businesses. He is
+									the co-founder of Bitsandcoins Consulting UG, the first Bitcoin Consulting in
+									Europe, as well as E4BTC, the first e-commerce shop in Europe focused on Bitcoin.
+									He also co-founded Bitcoins Berlin, the first Bitcoin startup incubator in Europe.
+								</div>
+								<a target="_blank" href="https://www.linkedin.com/in/joergvonminckwitz"
+									 class="social-icon"><i
+											class="fa fa-linkedin"
+											aria-hidden="true"></i></a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div class="invitation">
-				Bitwala is growing! Meet the <a href="#">whole team</a> or <a href="#">join us</a>!
+				Bitwala is growing! Meet the <a target="_blank" href="https://www.linkedin.com/search/results/people/?facetCurrentCompany=%5B%2227009872%22%5D">whole team</a> or <a target="_blank" href="https://www.bitwala.com/careers">join us</a>!
 			</div>
 		</div>
 	</section>
