new pages creation

--- a/src/index.html
+++ b/src/index.html
@@ -1130,7 +1130,7 @@
 						<div class="col-6 col-sm-3">
 							<h6 class="foot-title">Bitwala Token</h6>
 							<ul class="foot-links">
-								<li><a target="_blank" href="https://www.bitwala.com/privacy-policy/"
+								<li><a target="_blank" href="privacy-policy.html"
 											 class="foot-link">Privacy Policy</a></li>
 								<li><a target="_blank" href="https://www.bitwala.com/imprint/" class="foot-link">Imprint</a>
 								</li>
