privacy policy styling

--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -183,14 +183,14 @@
 				<h4>Technical Data</h4>
 
 
-				<p>The technical information we collect for our website bitwalatoken.com includes:
+				<p>The technical information we collect for our website bitwalatoken.com includes: <br><br>
 
-					• Email Address
-					• IP Address (anonymised)
-					• Evaluation of website activity and internet usage
+					• Email Address<br>
+					• IP Address (anonymised)<br>
+					• Evaluation of website activity and internet usage<br>
 					• User website activity on the website and the location they came from (e.g. URL and
-					referrer)
-					• Operating system
+					referrer)<br>
+					• Operating system<br>
 
 				<p>With every access to our Website, usage data are transmitted through the respective
 					internet
